Corrected child component menu alignment

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -32,8 +32,7 @@ body {
   flex-flow: row wrap;
   text-align: left;
   padding-left: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  float: left;
 }
 
 .upper-menu .mat-button {
